<resources>
    <string name="app_name">ShopMateMobile</string>
    <string name="logo_name">ShopMate</string>
    <string name="welcome">Додаток, де кожна покупка - це нова радість!</string>
    <string name="register">Зареєструватись</string>
    <string name="login">Увійти</string>
    <string name="welcome_info">Онлайн шопінг, де зручність та задоволення зустрічаються!</string>
    <string name="have_account">Вже маєте акаунт?</string>
    <string name="devices">Devices</string>
    <string name="makeup">Makeup</string>
    <string name="furniture">Furniture</string>
    <string name="Login">Увійти</string>
    <string name="LoginUnderLine"><u>Увійти</u></string>
    <string name="RegistrUnderLine"><u>Зареєструватись</u></string>
    <string name="sign_in">Вхід</string>
    <string name="need_sign_in">Привіт! Тобі потрібно увійти</string>
    <string name="home">Home</string>
    <string name="basket">Корзина</string>
    <string name="favourite">Favourite</string>
    <string name="profile">Профіль</string>
    <string name="cost">Вартість:</string>
    <string name="rectangle">rectangle</string>
    <string name="coupon">Оберіть купон:</string>
    <string name="cost_discount">Вартість зі знижкою:</string>
    <string name="order">Замовити</string>
    <string name="edit_profile">Редагувати профіль</string>
    <string name="my_orders">Мої замовлення</string>
    <string name="my_coupons">Мої купони</string>
    <string name="my_addresses">Мої адреси</string>
    <string name="chat">Чат підтримки</string>
    <string name="exit">Вийти</string>
    <string name="sign_up">Реєстрація</string>
    <string name="need_sign_up">Привіт! Тобі потрібно зареєструватисья</string>
    <string name="name">Ім`я</string>
    <string name="surname">Прізвище</string>
    <string name="phone_number">Номер телефону</string>
    <string name="email">Електронна пошта</string>
    <string name="date_birth">Дата народження</string>
    <string name="password">Пароль</string>
    <string name="repeat_password">Повторіть пароль</string>
    <string name="active">Активні</string>
    <string name="used">Використані</string>
    <string name="expired">Прострочені</string>
    <string name="discount">знижка</string>
    <string name="expire_date">Діє до:</string>
    <string name="status">Статус:</string>
    <string name="order_creation">Оформлення замовлення</string>
    <string name="list_products">Список товарів</string>
    <string name="order_info">Відомості доставки</string>
    <string name="order_address">Адреса доставки</string>
    <string name="order_pay">Оплатити замовлення</string>
    <string name="profile_editing">Редагування профілю</string>
    <string name="edit">Застосувати</string>
    <string name="change_password">Змінити пароль</string>
    <string name="changing_password">Зміна паролю</string>
    <string name="old_password">Старий пароль</string>
    <string name="new_password">Новий пароль</string>
    <string name="repeat_new_password">Повторіть новий пароль</string>
    <string name="add_address">Додати адресу</string>
    <string name="categories">Категорії</string>
    <string name="like">Вподобати</string>
    <string name="back">Повернутись</string>
    <string name="generalPhoto">Головне фото</string>
    <string name="description">Опис</string>
    <string name="brand">Бренд: </string>
    <string name="category">Категорія: </string>
    <string name="reviews">Відгуки</string>
    <string name="add_review">Додати відгук</string>
    <string name="price">Ціна</string>
    <string name="add_to_cart">Додати в корзину</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Пошук</string>
    <string name="filter">Фільтр</string>
    <string name="edit_address">Зміна адреси</string>
    <string name="city">Місто</string>
    <string name="street">Вулиця</string>
    <string name="house">Будинок</string>
    <string name="flat">Квартира</string>
    <string name="add_comment">Додавання коментарю</string>
    <string name="set_grade">Поставте оцінку</string>
    <string name="write_review">Напишіть відгук</string>
    <string name="sorted_by">Сортувати за</string>
    <string name="prices">Діапазон цін</string>
    <string name="submit">Скинути фільтр</string>
    <string name="my_favourite">Мої вподобані</string>
    <string name="no_favourites">Ще немає вподобаних. Оберіть якийсь товар</string>
    <string name="delete">Видалити</string>
    <string name="edit_text">Редагувати</string>
    <string name="submit_order">Покупку підтверджено</string>
    <string name="ordering">Замовлення</string>
    <string name="total">Усього:</string>
    <string name="status_order">Статус замовлення</string>
    <string name="more">Більше</string>
    <string name="done">Виконані</string>

</resources>