<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingVertical="50dp"
    app:cardBackgroundColor="@color/background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginVertical="10dp"
        android:background="@color/background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/city"
                    android:textSize="16sp"
                    android:textColor="@color/brown"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="sans-serif-light"
                   />
                    <TextView
                        android:id="@+id/city"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/dark_brown"
                        />


            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/street"
                    android:textSize="16sp"
                    android:textColor="@color/brown"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="sans-serif-light"
                    />
                <TextView
                    android:id="@+id/street"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/dark_brown"
                    />


            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/house"
                    android:textSize="16sp"
                    android:textColor="@color/brown"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="sans-serif-light"
                    />
                <TextView
                    android:id="@+id/house"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/dark_brown"
                    />


            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/flat"
                    android:textSize="16sp"
                    android:textColor="@color/brown"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="sans-serif-light"
                    />
                <TextView
                    android:id="@+id/flat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/dark_brown"
                    />


            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <Button
                android:id="@+id/deleteAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:textColor="@color/brown"
                android:padding="0dp">
            </Button>
            <Button
                android:id="@+id/editAddresss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_text"
                android:textColor="@color/brown"

                android:padding="0dp">

            </Button>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"

        android:background="@drawable/line"
        />
    </LinearLayout>


</androidx.cardview.widget.CardView>