<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#F8F0EB"
    tools:context=".Basket">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="45dp"
            android:text="@string/basket"
            android:textSize="24sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_checkbox" />


    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/rectimage"
            android:layout_width="match_parent"
            android:layout_height="298dp"
            android:src="@drawable/rectangle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/rectangle" />

        <LinearLayout
            android:id="@+id/layoutBasketInfo"
            android:layout_width="311dp"
            android:layout_height="189dp"
            android:layout_marginTop="25dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/rectimage"
            app:layout_constraintTop_toTopOf="@+id/rectimage">

            <LinearLayout
                android:id="@+id/column1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="@+id/layoutBasketInfo"
                app:layout_constraintTop_toTopOf="@+id/layoutBasketInfo">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:text="@string/cost"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textSize="17sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="15dp"
                android:gravity="start"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="@+id/layoutBasketInfo"
                app:layout_constraintTop_toBottomOf="@+id/column1">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:text="@string/coupon"
                    android:textSize="15sp" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/layoutBasketInfo" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/column3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="start"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="@+id/layoutBasketInfo"
                app:layout_constraintTop_ToBottomOf="@+id/layoutBasketInfo">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:text="@string/cost_discount"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textSize="17sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <Button
                android:id="@+id/button_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="#704F38"
                android:onClick="startNewActivity"
                android:text="@string/order"
                android:textColor="#F8F0EB"
                app:layout_constraintBottom_toBottomOf="@+id/layoutBasketInfo"
                app:layout_constraintTop_toBottomOf="@+id/column3" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>