<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ProductActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:layout_constraintBottom_toTopOf="@+id/down"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/likeIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/circle_like"
                android:elevation="4dp"
                android:padding="7dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_favorite_24"
                app:tint="@color/brown"
                android:contentDescription="@string/like" />

            <ImageView
                android:id="@+id/back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/circle_like"
                android:elevation="4dp"
                android:padding="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                app:srcCompat="@drawable/baseline_arrow_back_24"
                app:tint="@color/brown"
                android:contentDescription="@string/back" />


            <ImageView
                android:id="@+id/generalPhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/generalPhoto" />

            <LinearLayout
                android:id="@+id/photos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/radio_flat_regular"
                android:orientation="horizontal"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="@+id/generalPhoto"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/generalPhoto"

                >

                <TextView
                    android:id="@+id/nameProduct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/dark_brown"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/descriptionProduct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/brown"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/brand"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <View
                            android:layout_width="2dp"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/brandProduct"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-medium"
                            android:textColor="@color/brown"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/category"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <View
                            android:layout_width="2dp"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/categoryProduct"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-medium"
                            android:textColor="@color/brown"
                            android:textSize="16sp" />

                    </LinearLayout>


                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/line" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/reviews"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                    <Button
                        android:id="@+id/addReview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:padding="0dp"
                        android:text="@string/add_review"
                        android:textColor="@color/brown"

                        android:textSize="17sp">

                    </Button>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/reviews"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>
    <LinearLayout
        android:id="@+id/down"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/popup_rectangle"
        android:paddingHorizontal="15dp"
        android:paddingVertical="20dp"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginStart="20dp">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/price"
               android:textColor="@color/beige"
               android:textSize="20sp"/>
            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textColor="@color/brown"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/addToCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/radio_flat_selected"
            android:padding="15dp"
            android:layout_marginEnd="10dp"
            >
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/baseline_add_shopping_cart_24"
                android:contentDescription="@string/add_to_cart">

            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_to_cart"
                android:textSize="17sp"

                android:textColor="@color/background">

            </TextView>

        </LinearLayout>

        </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>